--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -15,7 +15,7 @@ body {
   
   .container {
     flex-grow: 1;
-    margin-top: 60px;
+    margin-top: 30px;
     text-align: center;
     background-color: #fff;
     border: 1px solid #cbd5e0;
@@ -43,14 +43,13 @@ body {
   }
   
   .connectButton {
-    margin-top: 40px;
-    margin-left: 500px;
+    margin-top: 60px;
+    margin-left: 600px;
   }
   .button {
     background-color: #319795;
     margin-top: 10px;
     margin-left: 2px;
-    border-radius: 0.01rem;
     padding: 5px 10px;
     color: white;
     display: inline-flex;
@@ -58,6 +57,8 @@ body {
     letter-spacing: 1px;
     font-weight: 200;
     font-size: .9em;
+    border: none;
+    border-radius: 5px;
     &:hover {
       cursor: pointer;
     }
